--- a/prepros.config
+++ b/prepros.config
@@ -912,6 +912,315 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "assets/1.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 963490,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/10.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 345857,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/11.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 232319,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/12.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 832643,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/13.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 1473558,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/14.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 529620,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/15.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 700222,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/16.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 988869,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/17.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 186318,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/18.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 118299,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/2.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 567258,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/20.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 288534,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/3.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 436602,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/4.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 113745,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/5.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 896796,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/6.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 447760,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/7.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 214699,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/8.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 275941,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/9.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 442666,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/Flyer Mockup 1.jpg",
+        "config": {
+          "tasks": {
+            "jpg": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 2844259,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/fotopers.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 50
+              }
+            }
+          },
+          "originalSize": 235020,
+          "optimized": true
+        }
+      },
+      {
+        "file": "assets/logo1.png",
+        "config": {
+          "tasks": {
+            "png": {
+              "options": {
+                "quality": 65
+              }
+            }
+          },
+          "originalSize": 6466,
+          "optimized": true
+        }
+      }
+    ]
   }
 }
